--- a/index.html
+++ b/index.html
@@ -1,11 +1,128 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <title>T. Sæther</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="description" content="" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+  <meta name="theme-color" content="#006eb3">
+  <meta property="og:title" content="" />
+  <meta property="og:description" content="" />
+  <meta property="og:image" content="" />
+  <meta name="twitter:card" content="" />
+  <meta name="twitter:site" content="" />
+  <meta name="twitter:title" content="" />
+  <meta name="twitter:description" content="" />
+  <meta name="twitter:image" content="" />
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 <body>
-    <script src="index.js"></script>
+  <header>
+    <h1>Heisann!</h1>
+    <h2>Mitt navn er Trym Sæther.</h2>
+  </header>
+  <nav class="nav" id="nav">
+    <a href="#home">Logo</a>
+    <a href="#menu-item-1">Menu Item 1</a>
+    <a href="#menu-item-2">Menu Item 2</a>
+    <a href="#menu-item-3">Menu Item 3</a>
+    <a href="javascript:void(0);" id="menu-toggle" onclick="togglemenu()">
+      <div class="menu-toggle__bar1"></div>
+      <div class="menu-toggle__bar2"></div>
+      <div class="menu-toggle__bar3"></div>
+    </a>
+  </nav>
+  <style>
+  /* For best practice, move CSS below to an external CSS file. */
+  .nav {
+    overflow: hidden; }
+  .nav a {
+    float: left;
+    margin: 10px;
+    display: block; }
+  .nav #menu-toggle {
+    display: none; }
+  @media screen and (max-width: 600px) {
+    .nav a:not(:first-child) {
+      display: none; }
+    .nav a#menu-toggle {
+      float: right;
+      display: block; } }
+  @media screen and (max-width: 600px) {
+    .nav.nav--open {
+      position: relative; }
+    .nav.nav--open #menu-toggle {
+      position: absolute;
+      right: 0;
+      top: 0; }
+    .nav.nav--open a {
+      float: none;
+      display: block;
+      text-align: left; } }
+  .menu-toggle__bar1, .menu-toggle__bar2, .menu-toggle__bar3 {
+    width: 21px;
+    height: 3px;
+    background-color: #000000;
+    margin: 4px 0;
+    transition: 0.3s; }
+  .menu-toggle--open .menu-toggle__bar1 {
+    transform: translate(0, 7px) rotate(-45deg); }
+  .menu-toggle--open .menu-toggle__bar2 {
+    opacity: 0; }
+  .menu-toggle--open .menu-toggle__bar3 {
+    transform: translate(0, -7px) rotate(45deg); }
+  </style>
+  <p>Aliquas velit qui aliquas pariaturs commodo fugiat et velit incididunt pariaturs exercitation labore occaecat eiusmod mollit ipsum amets dolore labore officia irure aliquas dolore ullamco ut non aliquas mollit in tempor est sit elits reprehenderit pariaturs aute ex ex ut fugiat ut elits velit elits ut Lorem eiusmod ex anim.</p>
+  <img src="https://via.placeholder.com/800x600/" alt="">
+  <main>
+    <section></section>
+    <section></section>
+    <section></section>
+  </main>
+  <form action="#">
+    <label for="firstName">First name:</label><br>
+    <input type="text" name="firstName" value="John"><br>
+    <label for="lastName">Last name:</label><br>
+    <input type="text" name="lastName" value="Doe"><br>
+    <label for="email">Email:</label><br>
+    <input type="email" name="email" value="example@example.com"><br>
+    <label for="phone">Phone:</label><br>
+    <input type="tel" name="phone" value="555-555-5555"><br>
+    <input type="submit" value="Submit">
+  </form>
+  <table border="1" cellspacing="0" cellpadding="5">
+    <tr>
+      <td>Row 1, Column 1</td>
+      <td>Row 1, Column 2</td>
+      <td>Row 1, Column 3</td>
+    </tr>
+    <tr>
+      <td>Row 2, Column 1</td>
+      <td>Row 2, Column 2</td>
+      <td>Row 2, Column 3</td>
+    </tr>
+  </table>
+  <footer>
+    <small>© <script>document.write(new Date().getFullYear())</script> Your company name. All Rights Reserved.</small>
+  </footer>
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js" crossorigin="anonymous"></script>
+  <script>
+  function togglemenu() {
+    var x = document.getElementById("nav");
+    if (x.className === "nav") {
+      x.className += " nav--open";
+    } else {
+      x.className = "nav";
+    }
+    var element = document.getElementById("menu-toggle");
+    element.classList.toggle("menu-toggle--open");
+  }
+  </script>
+  <script src="app.js"></script>
 </body>
 </html>
