--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="s-hero__scroll">
             <a href="#about" class="s-hero__scroll-link smoothscroll">
                 <span class="scroll-arrow">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:"><path d="M18.707 12.707L17.293 11.293 13 15.586 13 6 11 6 11 15.586 6.707 11.293 5.293 12.707 12 19.414z"></path></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1); transform: -ms-filter;"><path d="M18.707 12.707L17.293 11.293 13 15.586 13 6 11 6 11 15.586 6.707 11.293 5.293 12.707 12 19.414z"></path></svg>
                 </span>
                 <span class="scroll-text">Scroll Down</span>
             </a>
@@ -135,14 +135,14 @@
                         Trym Sæther <br>
                         7048, Trondheim <br>
                         Norway<br>
-                        <a href="tel:+1975432345">+47 99 50 88 10</a> <br>
-                        <a href="mailto:#0">saether.trym@gmail.com</a>
+                        <a href="tel:+47 99 50 88 10">+47 99 50 88 10</a> <br>
+                        <a href="mailto:saether.trym@gmail.com">saether.trym@gmail.com></a>
                         </p>
                         
                     </div>
                     <div class="column w-1000-stack">
                         <a href="images/CV_TrymSæther.pdf" class="btn btn--download" download="CV_TrymSæther">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:"><path d="M12 16L16 11 13 11 13 4 11 4 11 11 8 11z"></path><path d="M20,18H4v-7H2v7c0,1.103,0.897,2,2,2h16c1.103,0,2-0.897,2-2v-7h-2V18z"></path></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:rgba(0, 0, 0, 1);transform: -ms-filter;"><path d="M12 16L16 11 13 11 13 4 11 4 11 11 8 11z"></path><path d="M20,18H4v-7H2v7c0,1.103,0.897,2,2,2h16c1.103,0,2-0.897,2-2v-7h-2V18z"></path></svg>
                             Download CV
                         </a>
                     </div>
@@ -525,19 +525,6 @@
                 </h3>
             </div>
         </div> <!-- end heading-block -->
-
-        <div class="row cta-content">
-            <div class="column">
-                <p>
-                We highly recommend <a href="https://www.dreamhost.com/r.cgi?287326">DreamHost</a>.
-                Powerful web and Wordpress hosting. Guaranteed.
-                Starting at $2.95 per month.
-                </p>
-
-                <a href="https://www.dreamhost.com/r.cgi?287326" class="btn btn--primary h-full-width">Get Started</a>
-            </div>
-        </div> <!-- end cta-content -->
-
     </section> <!-- end s-cta -->
 
 
@@ -549,8 +536,9 @@
 
         <div class="row s-testimonials__header">
             <div class="column large-12">
-                <h3>Hear What My Clients Says</h3>
+                <h3>Activities</h3>
             </div>
+            <p>Here are some of the activities that we have done in the past.</p>
         </div>
 
         <div class="row s-testimonials__content">
@@ -640,7 +628,7 @@
 
         <div class="row s-contact__header">
             <div class="column large-12">
-                <h3 class="section-header-allcaps">Say Hello</h3>
+                <h3 class="section-header-allcaps">Say "Tjohei" to me :)</h3>
             </div>
         </div>
 
@@ -648,7 +636,7 @@
 
             <div class="column large-7 medium-12">
 
-                <h4 class="huge-text">
+                <h4 class="huge-text" style="font-size: xx-large;">
                 Have a new project in mind? Let's collaborate and build something awesome. 
                 Let's turn that idea to an even greater product :)
                 </h4>
@@ -664,7 +652,7 @@
                                 Email
                             </h5>
                             <p class="contact-block__content">
-                                <a class="mailtoui" href="mailto:sayhello@ceevee.com">sayhello@ceevee.com</a>
+                                <a class="mailtoui" style="font-size:x-large;" href="mailto:saether.trym@gmail.com">saether.trym@gmail.com</a>
                             </p>
                         </div> <!-- end contact-block -->
                     </div>
@@ -674,13 +662,13 @@
                                 Phone
                             </h5>
                             <p class="contact-block__content">
-                                <a href="tel:+1975432345">+197 543 2345</a>
+                                <a style="font: x-large;" href="tel:+47 99 50 88 10">+47 99 50 88 10</a>
                             </p>
                         </div> <!-- end contact-block -->
                     </div>
 
                     <div class="column large-12">
-                        <a href="mailto:sayhello@ceevee.com" class="mailtoui btn btn--primary h-full-width">Let's Talk</a>
+                        <a href="mailto:saether.trym@gmail.com" class="mailtoui btn btn--primary h-full-width">Let's Talk</a>
                     </div>
                 </div> <!-- end contact-infos -->
 
