--- a/index.html
+++ b/index.html
@@ -85,9 +85,8 @@
                     -->
 
                     <div class="s-hero__content-social">
-                        <a href="#0"><i class="fab fa-facebook-square" aria-hidden="true"></i></a>
-                        <a href="#0"><i class="fab fa-twitter" aria-hidden="true"></i></a>
-                        <a href="#0"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+                        <a href="https://www.facebook.com/trym.saether"><i class="fab fa-facebook-square" aria-hidden="true"></i></a>
+                        <a href="https://www.instagram.com/saether.trym/"><i class="fab fa-instagram" aria-hidden="true"></i></a>
                         <a href="https://www.github.com/trymsaether"><i class="fab fa-github" aria-hidden="true"></i></a>
                         <a href="https://www.linkedin.com/in/trym-sæther-128a64237"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
                     </div>
@@ -684,11 +683,11 @@
         <div class="row">
             <div class="column large-4 medium-6 w-1000-stack s-footer__social-block">
                 <ul class="s-footer__social">
-                    <li><a href="#0"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
-                    <li><a href="#0"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a href="#0"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
-                    <li><a href="#0"><i class="fab fa-dribbble" aria-hidden="true"></i></a></li>
-                    <li><a href="#0"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.facebook.com/trym.saether"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.instagram.com/saether.trym/"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.github.com/trymsaether"><i class="fab fa-github" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/trym-sæther-128a64237"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
+
                 </ul>
             </div>
 
