updated bio in start

--- a/index.html
+++ b/index.html
@@ -117,13 +117,15 @@
             <div class="column large-9 tab-12 s-about__content">
                 <h3>About Me</h3>
                 <p>
-                Hello! I'm Trym Sæther, a passionate professional who thrives in challenging environments, 
-                leveraging my analytical thinking and problem-solving skills. 
-                With a strong foundation in technology and leadership, I've successfully driven projects from conception to completion. 
-                My educational journey includes a focus on Physics and Mathematics at NTNU in Trondheim and a Bachelor's in Electroengineering. 
-                Beyond academics, I've had diverse experiences such as refereeing Handball at the Norwegian top division, working with youth in Trondheim, to serving as a medic in the Norwegian Armed Forces. 
-                I value collaboration and continuously seek opportunities for personal and professional growth. 
-                Let's connect and create something impactful together!
+                Hello! I'm Trym Sæther, a quickwitted (current) student in Physics & Math (MsC), who tries to make my academic journey as fun and interactive as possible trough small and big projects. I like to use my analytical thinking and problem-solving skills both academically and in my personal life. 
+                I have a strong foundation now, after a few years on the school bench, in technology-driven subjects, such as programming (see below for what languages, and at what level i believe i am at), maths, physics and manymany more. My educational journey includes a focus on Physics and Mathematics at NTNU.
+                Beyond academics, I've had experiences such as refereeing Handball at the Norwegian top division, working with youth in Trondheim, and served as a medic in the Norwegian Armed Forces. 
+                My Personal Values are: 
+                <br>
+                - When doing "something", always do it 100% - or don't do it at all (my father, ca 2000). <br>
+                - Personal growth, both for me and the people around me, is important for me. <br>
+                - Always learn and be accepting of new ideas, perspectives and challenges, even if they are trivial or hard! <br>
+                So let's connect and create something impactful together!
                 </p>
                 <hr>
                 <div class="row s-about__content-bottom">
