Updated progressbars for java html css and removed iot, maybe remove microcontr aswell

--- a/index.html
+++ b/index.html
@@ -290,36 +290,32 @@
 
                     <ul class="skill-bars-fat">
                         <li>
-                        <div class="progress percent90"></div>
+                        <div class="progress percent80"></div>
                         <strong>Python</strong>
                         </li>
                         <li>
-                        <div class="progress percent80"></div>
+                        <div class="progress percent60"></div>
                         <strong>C++</strong>
                         </li>
                         <li>
-                        <div class="progress percent15"></div>
+                        <div class="progress percent25"></div>
                         <strong>HTML</strong>
                         </li>
                         <li>
-                        <div class="progress percent15"></div>
+                        <div class="progress percent10"></div>
                         <strong>CSS</strong>
                         </li>
                         <li>
-                        <div class="progress percent5"></div>
+                        <div class="progress percent10"></div>
                         <strong>Javascript</strong>
                         </li>
                         <li>
-                        <div class="progress percent5"></div>
+                        <div class="progress percent10"></div>
                         <strong>java</strong>
                         </li>
                         <li>
-                        <div class="progress percent75"></div>
-                        <strong>Microcontrollers (Arduino, ESP, Raspberry PI)</strong>
-                        </li>
-                        <li>
-                        <div class="progress percent75"></div>
-                        <strong>IOT (Internet of Things)</strong>
+                        <div class="progress percent55"></div>
+                        <strong>Microcontrollers </strong>
                         </li>
                     </ul>
 
