Refactor animation code and optimize performance

--- a/index.html
+++ b/index.html
@@ -346,6 +346,20 @@
                                  https://raw.githubusercontent.com/TrymSaether/MH_3DSurfacePlot/main/surfaceplot_MH.png 2x" alt="">
                 </a>
             </div> <!-- end folio-item -->
+            <div class="column folio-item">
+                <a href="https://github.com/TrymSaether/MH_3DSurfacePlot" class="folio-item__thumb">
+                    <img src="https://raw.githubusercontent.com/TrymSaether/MH_3DSurfacePlot/main/surfaceplot_MH.png" style="width:400px; height:320px;"
+                         srcset="https://raw.githubusercontent.com/TrymSaether/MH_3DSurfacePlot/main/surfaceplot_MH.png 1x, 
+                                 https://raw.githubusercontent.com/TrymSaether/MH_3DSurfacePlot/main/surfaceplot_MH.png 2x" alt="">
+                </a>
+            </div> <!-- end folio-item -->
+            <div class="column folio-item">
+                <a href="https://github.com/TrymSaether/MH_3DSurfacePlot" class="folio-item__thumb">
+                    <img src="https://raw.githubusercontent.com/TrymSaether/MH_3DSurfacePlot/main/surfaceplot_MH.png" style="width:400px; height:320px;"
+                         srcset="https://raw.githubusercontent.com/TrymSaether/MH_3DSurfacePlot/main/surfaceplot_MH.png 1x, 
+                                 https://raw.githubusercontent.com/TrymSaether/MH_3DSurfacePlot/main/surfaceplot_MH.png 2x" alt="">
+                </a>
+            </div> <!-- end folio-item -->
 
             <div class="column folio-item">
                 <a href="https://github.com/TrymSaether/Smartklokke" class="folio-item__thumb">
