Clean up comments in index.html for testimonials section

--- a/index.html
+++ b/index.html
@@ -531,10 +531,7 @@
 
     </section> <!-- end s-portfolio -->
 
-
-
-    <!-- testimonials/activities
-    ================================================== -->
+    <!-- testimonials -->
     <section id="testimonials" class="s-testimonials target-section">
         <div class="row s-testimonials__header">
             <div class="column large-12">
