Fix image file extensions in index.html for consistency

--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
         <div class="row">
             <div class="column large-3 tab-6">
                 <div class="activity-card">
-                    <img src="images/act_5.jpg" alt="Activity 1" class="activity-image">
+                    <img src="images/act_5.JPG" alt="Activity 1" class="activity-image">
                     <h4>Handball</h4>
                     <p>I have been a top-division handball referee in Norway since 2013, developing leadership and decision-making skills.</p>
                 </div>
@@ -550,7 +550,7 @@
             
             <div class="column large-3 tab-6">
                 <div class="activity-card">
-                    <img src="images/act_7.jpg" alt="Activity 2" class="activity-image">
+                    <img src="images/act_7.JPG" alt="Activity 2" class="activity-image">
                     <h4>Outdoor Exploration</h4>
                     <p>Active participant in Norway's rich outdoor traditions, like hiking, hunting, and fishing.</p>
                 </div>
